--- a/HikawaShrine/i18n/default.json
+++ b/HikawaShrine/i18n/default.json
@@ -1,4 +1,8 @@
 ﻿{
-  "template.start": "Started {{mod}} from folder: {{folder}}",
-  "template.key": "Debug Key pressed"
+  "loc.name.shrine": "Hikawa Shrine",
+  "loc.name.home": "Hino Residence",
+
+  "npc.name.rei": "Rei",
+  "npc.name.ami": "Ami",
+  "npc.name.usagi": "Usagi"
 }
