Replaced old structure. Added strings for generic dialogues, shrine offerings, story progression, Story.Stock, and Story.Plant events.

--- a/Hikawa/i18n/default.json
+++ b/Hikawa/i18n/default.json
@@ -1,47 +1,46 @@
 ﻿{
-    "loc.shrine": "temple", 
-    "loc.hikawashrine": "Cherry Hill Temple",
-    "loc.home": "Rei's House",
-    "loc.hill": "Cherry Hill",
-    "loc.school": "Brookdale Private",
-    "loc.tower": "Starlight Tower",
+  // Generic dialogue question strings
+  "dialogue.response.yes": "Yes",
+  "dialogue.response.no": "No",
+  "dialogue.response.ok": "OK",
+  "dialogue.response.cancel": "Cancel",
+  "dialogue.response.ready": "I'm ready!",
+  "dialogue.response.veryready": "I'm sure!",
+  "dialogue.response.later": "Not yet",
 
-    "jp.loc.shrine": "shrine",
-    "jp.loc.hikawashrine": "Hikawa Shrine",
-    "jp.loc.home": "Hino Residence",
-    "jp.loc.hill": "Sendaizaka Hill",
-    "jp.loc.school": "TA Private",
-    "jp.loc.tower": "Starlight Tower",
+  // World interaction strings
+  "string.shrine.shop_closed": "Nobody's attending the souvenir shop at the moment.",
+  "string.shrine.offering_prompt": "Make an offering?",
+  "string.shrine.offering_awaiting": "You've already paid tribute to the shrine today.",
+  "string.shrine.offering_cooldown": "You still feel a little peculiar from your last visit.",
+  "string.shrine.offering_accepted.0": "You feel a little less rich.",
+  "string.shrine.offering_accepted.1": "You feel a shiver run through you.",
+  "string.shrine.offering_accepted.2": "You feel a little uneasy.",
+  "string.shrine.offering_accepted.3": "You feel slightly hungry.",
+  "string.shrine.offering_accepted.4": "You feel a hint of comfort.",
+  "string.shrine.offering_accepted.5": "You feel a warm breeze.",
+  "string.shrine.offering_accepted.6": "You feel the warmth of sunlight.",
+  "string.shrine.offering_accepted.7": "You feel a weight has been lifted.",
+  "string.shrine.offering_accepted.8": "You feel the wind behind you.",
+  "string.shrine.offering_accepted.9": "You feel a great sense of confidence.",
 
-    "npc.rei": "Raye",
-    "npc.ami": "Amy",
-    "npc.usagi": "Serena",
-    "npc.chibi": "Rini",
-    "npc.gramps": "Grandpa",
-    "npc.guy": "Chad",
-    "npc.jade": "Jedite",
-    "npc.koan": "Koan",
-    "npc.berthier": "Bertie",
-    "npc.calaveras": "Avery",
-    "npc.petz": "Prizma",
+  "string.shrine.atlantis_prompt": "Set off on the next chapter?",
+  "string.shrine.atlantis_veryprompt": "This action will have consequences. Go ahead?",
 
-    "jp.npc.rei": "Rei",
-    "jp.npc.ami": "Ami",
-    "jp.npc.usagi": "Usagi",
-    "jp.npc.chibi": "Chibiusa",
-    "jp.npc.gramps": "Grandpa",
-    "jp.npc.guy": "Yuuichiro",
-    "jp.npc.jade": "Jadeite",
-    "jp.npc.koan": "Koan",
-    "jp.npc.berthier": "Berthier",
-    "jp.npc.calaveras": "Calaveras",
-    "jp.npc.petz": "Petz",
+  // Misc character strings
+  // todo: portrait codes
+  "string.story.stock.chat_first": "Huh? You're a new face in town.$b#If you're looking for the old shrine, you're out of luck.",
+  "string.story.stock.chat_after": "When that new chain store arrived, they dumped their stock at our steps.$b#I wish someone would just blow it up already.",
+  "string.story.plant.mono1": "Such greed from these hungry townsfolk...", 
+  "string.story.plant.mono1plus": "Such energy, what potential!", 
+  "string.story.plant.mono2": "Your energy will feed the dark!", 
+  "string.story.plant.mono3": "Ha ha ha...", 
 
-    "name.darkrealm": "Negaverse",
-    "name.darkmoon": "Negamoon",
-
-    "jp.name.darkrealm": "Dark Kingdom",
-    "jp.name.darkmoon": "Nemesis",
-
-    "string.loc.shrine.shopclosed": "Nobody's attending the souvenir shop at the moment.",
+  // Event strings
+  "event.story.stock.0000": "speak \"HikawaRei What the ..?\"",
+  "event.story.stock.0001": "speak Morris \"Augh!! What's this?!$2#$b#That was a year's supply of alternative-fat lunch substitutes!$3h#$b#You snivelling little--$3#$b#Ahem, you'll see action for this!$1#$b#In fact, JojaMart has a new regional sub-deputy under-manager to introduce!\"",
+  "event.story.stock.0002": "speak HikawaJade \"Good day. I do like to meet my targets.\"",
+  "event.story.stock.0003": "speak Morris \"You should be honoured to be a part of Joja Corporation's regional strategy!\"",
+  "event.story.stock.0004": "speak HikawaRei \"What a bunch of creeps.\"",
+  "event.story.stock.0005": "speak HikawaRei \"You really did blow up their stockade, didn't you?$b#\"" // todo the rest of this -- gender flip case?
 }
